Exercise 2 is done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css">
     <title>Landing page</title>
 </head>
 <body>
@@ -22,5 +23,65 @@
           </div>
         </div>
       </nav>
+
+
+      <!--/-/-/-/-/-/-/-/-/ EXERCISE 2 🚀 -/-/-/-/-/-/-/-/-->
+      <section class="container">
+        <div>
+          <h1 class="display-4 text-center">Exercise 2</h1>
+          <p class="font-weight-light w-50 mx-auto text-center" style="font-size: larger;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, voluptas, quam voluptate ex esse similique aut, ad quis consequatur minus debitis tempore quo ipsam dolores consectetur et !</p>
+        </div>
+        <div class="container pt-3">
+          <div class="row d-flex justify-content-between align-items-center">
+            <div class="card" style="width: 30%;">
+                <h4 class="card-header text-center">Free</h4>
+                <div class="text-center">
+                  <h2 class="py-3 font-weight-bold">$0<span class="text-muted"> / mo</span></h2>
+                  <div class="pb-3" style="line-height: 50%;">
+                    <p>10 users included</p>
+                    <p>2GB of storage</p>
+                    <p>Email Support</p>
+                    <p>Help Center Access</p>
+                  </div>
+                </div>
+                <div class="p-3">
+                  <button class="btn btn-outline-primary w-100">Sign up for free</button>
+                </div>
+            </div>
+            <div class="card" style="width: 30%;">
+              <h4 class="card-header text-center">Pro</h4>
+              <div class="text-center">
+                <h2 class="py-3 font-weight-bold">$15<span class="text-muted"> / mo</span></h2>
+                <div class="pb-3" style="line-height: 50%;">
+                  <p>20 users included</p>
+                  <p>10GB of storage</p>
+                  <p>Priority Email Support</p>
+                  <p>Help Center Access</p>
+                </div>
+              </div>
+              <div class="p-3">
+                <button class="btn btn-primary w-100">Get Started</button>
+              </div>
+          </div>
+          <div class="card" style="width: 30%;">
+            <h4 class="card-header text-center">Enterprise</h4>
+            <div class="text-center">
+              <h2 class="py-3 font-weight-bold">$29<span class="text-muted"> / mo</span></h2>
+              <div class="pb-3" style="line-height: 50%;">
+                <p>30 users included</p>
+                <p>15GB of storage</p>
+                <p>Phone and Email Support</p>
+                <p>Help Center Access</p>
+              </div>
+            </div>
+            <div class="p-3">
+              <button class="btn btn-primary w-100">Contact us</button>
+            </div>
+        </div>    
+          </div>
+        </div>
+      </section>
+
+
 </body>
 </html>
