structure created for section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,27 @@
         </div>
       </section>
 
+      <section class="container pt-5">
+        <div>
+          <h1 class="display-4 text-center">Exercise 4</h1>
+          <p class="font-weight-light w-50 mx-auto text-center" style="font-size: larger;">Lorem ipsum dolor sit amet consectetur adipisicing elit !</p>
+        </div>
+        <div class="container">
+          <div class="container">
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+          </div>
+          <div class="container">
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+          </div>
+        </div>
+      </section>
+
 
 </body>
 </html>
